--- a/client/app/pages/home/home.component.html
+++ b/client/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div id="home">
+
+    <div id = "cover">
+        <img id="coverimg" src="../../../../public/images/cover1.jpg">
+
+    </div>
+
+</div>
+
+<login></login>
+<signup></signup>
