--- a/server/views/index.html
+++ b/server/views/index.html
@@ -8,12 +8,25 @@
 
       <!-- CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/material-dashboard.css" rel="stylesheet"/>
     <link href="/css/styles.css" rel="stylesheet"/>
+    <link href="/css/material-kit.css" rel="stylesheet"/>
 
-    <!-- Fonts & Icon -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+
+
+    <!--material design kit-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
+    <link href="/css/demo.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/bootstrap-theme.css">
+<!-- login form-->
+    <link rel="stylesheet" href="/css/login-register.css">
+
+
+
+
 </head>
 
 <body>
@@ -24,6 +37,17 @@
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/js/material.min.js" type="text/javascript"></script>
 <script src="/js/script.js"></script>
+
+<!--   Core JS Files   -->
+
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="/js/nouislider.min.js" type="text/javascript"></script>
+
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
+
+<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="/js/material-kit.js" type="text/javascript"></script>
 <!--<script src="node_modules/ng2-bs3-modal/bundles/ng2-bs3-modal.js"></script>-->
 
 <script src="/build/polyfills.js"></script>
@@ -33,6 +57,7 @@
 
 <!-- Material Dashboard javascript methods -->
 <script src="/js/material-dashboard.js"></script>
+
 
 </body>
 </html>
