fix card component bug

--- a/client/app/pages/navbar/nav.component.html
+++ b/client/app/pages/navbar/nav.component.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/card">Cards</a>
+                    <a routerLink="love">Cards</a>
 
                 </li>
                 <li>
